style.css
:root{
    --tertiary: #ffffff;
    --text:#000;
    --greyText:#0000003f;
    --primary:#4071f4;
    --secondary: #4071f435;
    --primDark: #3156bc;
    --blackBg:#232323;
    --mouse:#e1684d;
    --whitebg:rgb(235, 235, 235);
    --transparent:rgba(255, 255, 255, 0.15);
}

html{
    scroll-behavior: smooth;
}

body{
    margin: 50px 0 0 0;
    padding: 20px 0 0 0;
    overflow-x: hidden;
    background-color: var(--tertiary);
    /* scroll-snap-type */
    transition: 1s;
    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
}

.shape{
    width: 800px;
    height: 800px;
    background: var(--primary);
    position: absolute;
    /* top: -100px; */
    left: -250px;
    opacity: .1;
    z-index: -1;
    animation: wave 4.0s ease-in-out infinite;
}

#nav{
    width: 100vw;
    /* background-color: var(--tertiary); */
    background: var(--transparent);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(10px);
    border: 1px solid var(--whitebg);
    position: fixed;
    top: 0;
    height: 75px; 
    z-index: 10;
    /* display: flex; */
}

#nav ul{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
    font-size: 18px;
    padding: 0 20px 0 0;
    width: 60%;
    float: right;
    cursor: none;
}

#nav ul li:hover{
    transition:.5s;
    transform: scale(1.1);
}
#nav ul li::after{
    content: "";
    display: block;
    height: 4px;
    width: 0%;
    background-color: var(--primary);
}
#nav ul li:hover::after{
    width: 100%;
    transition:.3s;
}

#nav ul li:nth-child(5):hover::after, #nav ul li:nth-last-child(1):hover::after{
    width: 0;
}

.color{
    color: var(--text);
    text-decoration: none;
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;

}

#switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

#switch input { 
    display: none;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--primary);
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 34px;
}

.slider:before {
    border-radius: 50%;
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: var(--tertiary);
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

.hamburger {
    display: none;
    cursor: pointer;
    flex-direction: column;
    justify-content: space-between;
    height: 18px;
}

.hamburger i {
    font-size: 24px;
    color: var(--text);
}

.nav-container{
    display: none;
    justify-content: space-around;
    align-items: center;
    height: 100%;
    /* padding: 0 20px; */
}

.nav-container #switch{
    display: none;
}

#nav-links.active {
    display: flex;
    flex-direction: column;
}
/* #nar-link.active li{
    color: var(--tertiary);
} */

.dark-mode{
    background-color: var(--blackBg);
}

#container{
    /* background-color: var(--tertiary); */
    font-family: Arial, Helvetica, sans-serif;
    /* scroll-snap-type: y mandatory;
    height: 100vh;
    overflow-y: scroll; */
}

#home{
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    align-content: center;
    /* scroll-snap-align: start; */
}

#content{
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 25px;
    animation: blur 1s linear;
}

#designation{
    color: var(--primary);
    /* max-width: 50vw; */
    /* font-size: 29px; */
    font-size: 29px;
    line-height: 40px;
    /* font-size: unset; */
}

#designation h2, #name h1, #hello h3{
    margin: 10px 0;
}

#name{
    color: var(--text);
    font-size: 47px;
    line-height: 80px;
}

#hello{
    color: var(--text);
    font-size: 29px;
}

#photo{
    display: flex;
    justify-content: center;
    animation: blur 1s linear;
    /* animation: appear 5s linear; */
    /* height: 500px; */
}

#top{
    height: 300px;
    width: auto;
    /* margin-top: -90px; */
}
#top img{
    animation: wave 4.0s ease-in-out infinite;
    margin-top: -110px;
    height: auto;
    width: 450px;
    /* border-radius: 50px; */
}

#bottom{
    z-index: -1;
    position: absolute;
    overflow: hidden;
    height: 450px;
    width: 425px;
    background-color: var(--primary);
    animation: wave 4.0s ease-in-out infinite;
}

.resume{
    height: 50px;
    width: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--tertiary);
    background-color: var(--primary);
    box-shadow: var(--secondary), 0 2px 2px 0;
    border-radius: 25px;
    border: var(--primary);
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
}

.resumeDiv{
    width: 150px;
}

.resumeDiv .resume{
    margin-top: 20px;
}

#about{
    height: auto;
    width: 100vw;
    padding: 25px;
    background-color: var(--secondary);
    display: block;
    /* scroll-snap-align: start; */
}

.heading{
    color: var(--primary);
    font-size: 40px;
    font-weight: 100;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: side 5s linear;
    animation-timeline: view(0%);
    animation-range: entry 0 cover 30%;
}

.hbottom{
    position: absolute;
    font-size: 100px;
    font-family: "Dancing Script", cursive;
    opacity: .15;
    z-index: -1;
}

#upper{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
    align-items: center;
}

.ed{
    color: var(--primary);
}

#pic{
    float: left;
    height: auto;
    display: flex;
    margin: 50px;
    justify-content: center;
    align-items: center;
}
/* ... */

